--- a/CODEMETA.yaml
+++ b/CODEMETA.yaml
@@ -23,6 +23,9 @@
 
 categories:
   - scientific-software
+    - tight-binding
+    - quantum
+    - materials
   # - ai-ml
   # - simulation
   # - visualization
@@ -44,13 +47,13 @@ themes:
   # - Information Technology
   # - Infrastructure
   # - Manufacturing
-  # - Materials
+  - Materials
   # - Mathematics & Statistics
   # - Metrology
   # - Nanotechnology
   # - Neutron research
   # - Performance excellence
-  # - Physics
+  - Physics
   # - Public safety
   # - Resilience
   # - Standards
